--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "react-textfit": "^1.1.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "steam-inventory-api-ng": "^1.0.6",
     "steam-tradeoffer-manager": "^2.10.1"
   },
