--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
-    "steam-inventory-api-ng": "^1.0.6"
+    "mongoose": "^5.9.5",
+    "steam-inventory-api-ng": "^1.0.6",
+    "steam-market-pricing": "^2.0.0",
+    "steam-price-api": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
