--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-textfit": "^1.1.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
     "steam-inventory-api-ng": "^1.0.6",
     "steam-tradeoffer-manager": "^2.10.1"
   },
