--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.5",
     "steam-inventory-api-ng": "^1.0.6",
     "steam-market-pricing": "^2.0.0",
-    "steam-price-api": "^2.0.0"
+    "steam-price-api": "^2.0.0",
+    "steam-totp": "^2.1.1",
+    "steam-tradeoffer-manager": "^2.10.1",
+    "steam-user": "^4.13.2",
+    "steamcommunity": "^3.41.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
