--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.5",
+    "redux-saga": "^1.1.3",
     "steam-inventory-api-ng": "^1.0.6",
     "steam-market-pricing": "^2.0.0",
     "steam-price-api": "^2.0.0",
