--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.5",
     "redux-saga": "^1.1.3",
+    "request": "^2.88.2",
     "steam-inventory-api-ng": "^1.0.6",
     "steam-market-pricing": "^2.0.0",
     "steam-price-api": "^2.0.0",
