--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "@iconify/icons-fa-solid": "^1.0.8",
     "@iconify/icons-ic": "^1.0.9",
     "@iconify/icons-mdi": "^1.0.81",
+    "@iconify/icons-topcoat": "^1.0.3",
     "@iconify/react": "^1.1.3"
   }
 }
