--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "@iconify/icons-dashicons": "^1.0.4",
     "@iconify/icons-emojione": "^1.0.5",
     "@iconify/icons-fa-solid": "^1.0.8",
+    "@iconify/icons-fe": "^1.0.3",
     "@iconify/icons-ic": "^1.0.9",
     "@iconify/icons-mdi": "^1.0.81",
     "@iconify/icons-topcoat": "^1.0.3",
