--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-textfit": "^1.1.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "steam-inventory-api-ng": "^1.0.6",
     "steam-tradeoffer-manager": "^2.10.1"
