finish login functionality using steam oauth 2.0 and move database into mongodb atlas

--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "fs": "0.0.1-security",
     "lodash": "^4.17.15",
+    "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
+    "passport": "^0.4.1",
+    "passport-steam": "^1.0.12",
     "redux-saga": "^1.1.3",
     "request": "^2.88.2",
     "steam-inventory-api-ng": "^1.0.6",
