--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "react-textfit": "^1.1.0",
