--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-icons-kit": "^1.3.1",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-textfit": "^1.1.0",
     "redux": "^4.0.5",
