--- a/admin/package.json
+++ b/admin/package.json
@@ -17,8 +17,7 @@
     "react-spinners": "^0.8.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0",
-    "styled-components": "^5.1.0"
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
