--- a/admin/package.json
+++ b/admin/package.json
@@ -15,7 +15,9 @@
     "moment-timezone": "^0.5.28",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react-app-rewire-hot-loader": "^2.0.1",
+    "react-dom": "npm:@hot-loader/react-dom",
+    "react-hot-loader": "^4.12.21",
     "react-icons-kit": "^1.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -24,7 +26,8 @@
     "react-virtualized": "^9.21.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "set PORT=3001 && react-app-rewired start",
