--- a/admin/package.json
+++ b/admin/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.0",
     "react-hot-loader": "^4.12.21",
     "react-icons-kit": "^1.3.1",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
