--- a/admin/package.json
+++ b/admin/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.1",
     "react-virtualized": "^9.21.2",
+    "recharts": "^1.8.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0"
