--- a/admin/package.json
+++ b/admin/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@hot-loader/react-dom": "^16.13.0",
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.52",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.9.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "moment": "^2.25.3",
+    "moment": "^2.26.0",
     "moment-timezone": "^0.5.28",
     "node-sass": "^4.14.0",
     "react": "^16.13.0",
