--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
     "cookie-parser": "^1.4.5",
@@ -28,6 +29,7 @@
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "passport-steam": "^1.0.12",
     "redux-saga": "^1.1.3",
     "request": "^2.88.2",
